SHADOWING WORKS
 Changes to be committed:
	modified:   build.gradle
	modified:   gradle.properties
	modified:   src/main/java/io/github/hydos/holotext/HoloText.java
	deleted:    src/main/java/io/github/hydos/holotext/config/CodecWorld.java
	deleted:    src/main/java/io/github/hydos/holotext/config/Config.java
	deleted:    src/main/java/io/github/hydos/holotext/config/Entry.java
	new file:   src/main/java/io/github/hydos/holotext/core/ArmorStandExtensions.java
	new file:   src/main/java/io/github/hydos/holotext/core/Config.java
	deleted:    src/main/java/io/github/hydos/holotext/core/EntityHoloText.java
	new file:   src/main/java/io/github/hydos/holotext/core/HoloTexts.java
	deleted:    src/main/java/io/github/hydos/holotext/core/IHoloTextAccess.java
	deleted:    src/main/java/io/github/hydos/holotext/core/IServerWorldAccess.java
	deleted:    src/main/java/io/github/hydos/holotext/core/ITextReader.java
	deleted:    src/main/java/io/github/hydos/holotext/core/ITextWriter.java
	deleted:    src/main/java/io/github/hydos/holotext/core/IVectorReader.java
	deleted:    src/main/java/io/github/hydos/holotext/core/IVectorWriter.java
	deleted:    src/main/java/io/github/hydos/holotext/core/command/CommandHolo.java
	deleted:    src/main/java/io/github/hydos/holotext/mixin/AccessorArmorStandEntity.java
	new file:   src/main/java/io/github/hydos/holotext/mixin/ArmorStandEntityMixin.java
	renamed:    src/main/java/io/github/hydos/holotext/mixin/MixinMinecraftServer.java -> src/main/java/io/github/hydos/holotext/mixin/MinecraftServerMixin.java
	modified:   src/main/resources/holotext.mixins.json